# ocrxdoc

./: .gitignore  BUILD_GUIDE.md  INSTALL_GUIDE.md  LICENSE  MANIFEST.in  PACKAGE_STRUCTURE.md  PYPI_PUBLISH_GUIDE.md  README.md  README_OCRXDOC.md  build.bat  build_exe.py  download_models.py  main.py  pyproject.toml  requirements.txt  requirements_ocrxdoc.txt  setup.py  test_installation.py
.github/workflows/: publish.yml  test.yml
examples/: __init__.py  basic_usage.py  batch_processing.py
ocrxdoc/: __init__.py  core.py  models.py  processors.py  utils.py
